deployments/k8s/example-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: upl-redis
spec:
  ports:
  - port: 6379
  selector:
    app: upl-redis
  type: ClusterIP

# vim: set et ts=2 sw=2:
