deployments/k8s/example-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: upl
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: upl
  type: ClusterIP
