deployments/k8s/example-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: upl
spec:
  rules:
  - host: drop.example.com
    http:
      paths:
      - backend:
          service:
            name: upl
            port:
              number: 80
        path: /
        pathType: Prefix

# vim: set et ts=2 sw=2:
